--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -15,12 +15,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ratings, lookup = loadDic()"
+    "# ratings, lookup = loadDic()\n",
+    "ratings = loadDic()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# mostPop(ratings, 62423, sys.maxsize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
@@ -35,104 +47,80 @@
    ],
    "source": [
     "temp_mkeys = mostPop(ratings, 20, sys.maxsize)\n",
-    "temp_mtitles = getMovieTitleById(temp_mkeys)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
+    "temp_mtitles = getMovieTitleById(temp_mkeys)\n",
     "# temp_mkey = mostPop(ratings, 50, 9081)\n",
-    "temp_mkey = mostPop(ratings, 50, 384)\n",
+    "temp_mkey = mostPop(ratings, 50, 384) #only after param 384, temp_mkey has a reasonable number of record\n",
     "# temp_mkey = mostPop(ratings, 50, 365 * 2)\n",
     "# temp_mkey = mostPop(ratings, 50, 365 * 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "precision 2\n",
-      "recall 2\n",
-      "precision 0\n",
-      "recall 0\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 0\n",
-      "recall 0\n",
-      "precision 0\n",
-      "recall 0\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 5\n",
-      "recall 5\n",
-      "precision 5\n",
-      "recall 5\n",
-      "precision 5\n",
-      "recall 5\n",
-      "precision 4\n",
-      "recall 4\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[1079,\n",
+       " 47,\n",
+       " 21,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1,\n",
+       " -1]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "k = 10\n",
-    "mostPop_precisions = []\n",
-    "mostPop_recalls = []\n",
-    "mostPop_dcgs = []\n",
-    "for until in range(365 + 384, 9081, 365):\n",
-    "    recommended = mostPop(ratings, k, until)\n",
-    "    i = 1\n",
-    "    while(ratings.get(until + i, -1) == -1):\n",
-    "        i += 1\n",
-    "    actual = actualPop(ratings, lookup, k, until + i)\n",
-    "    mostPop_precisions.append(precisionAtK(recommended, actual, k))\n",
-    "    mostPop_recalls.append(recallAtK(recommended, actual, k))\n",
-    "    mostPop_dcgs.append(ndcgAtK(recommended, actual, k))"
+    "temp_mkey"
    ]
   },
   {
@@ -141,74 +129,44 @@
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "precision 2\n",
-      "recall 2\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 5\n",
-      "recall 5\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 5\n",
-      "recall 5\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 0\n",
-      "recall 0\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 6\n",
-      "recall 6\n",
-      "precision 3\n",
-      "recall 3\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 0\n",
-      "recall 0\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 6\n",
-      "recall 6\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 5\n",
-      "recall 5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "k = 10\n",
-    "recentPop_precisions = []\n",
-    "recentPop_recalls = []\n",
-    "recentPop_dcgs = []\n",
-    "for until in range(365 + 384, 9081, 365):\n",
-    "    recommended = recentPop(ratings, k, until, 6)\n",
-    "    i = 1\n",
-    "    while(ratings.get(until + i, -1) == -1):\n",
-    "        i += 1\n",
-    "    actual = actualPop(ratings, lookup, k, until + i)\n",
-    "    recentPop_precisions.append(precisionAtK(recommended, actual, k))\n",
-    "    recentPop_recalls.append(recallAtK(recommended, actual, k))\n",
-    "    recentPop_dcgs.append(ndcgAtK(recommended, actual, k))"
+    "def getRPrecision(param):\n",
+    "    month_recentPop = param['delta_t']\n",
+    "    month_decayPop = param['delta_t']\n",
+    "\n",
+    "    mostPop_precisions = []\n",
+    "    recentPop_precisions = []\n",
+    "    decayPop_precisions = []\n",
+    "\n",
+    "    for until in range(365 * 5 + 384, 9081, 365):    \n",
+    "#     for until in range(365 * 5 + 384, 365 * 5 + 384 + 1):\n",
+    "        date = getNextValidDay(ratings, until)\n",
+    "        user_activities = getUserActivities(ratings[date])\n",
+    "        max_R = getMaxR(user_activities)\n",
+    "\n",
+    "        max_R_mostPop, max_R_recentPop, max_R_decayPop = (\n",
+    "            mostPop(ratings, max_R, until),\n",
+    "            recentPop(ratings, max_R, until, month_recentPop),\n",
+    "            decayPop(ratings, max_R, until, month_decayPop)\n",
+    "        )\n",
+    "\n",
+    "        mostPop_cur, recentPop_cur, decayPop_cur = (\n",
+    "            RPrecision(user_activities, max_R_mostPop),\n",
+    "            RPrecision(user_activities, max_R_recentPop),\n",
+    "            RPrecision(user_activities, max_R_decayPop)\n",
+    "        )\n",
+    "\n",
+    "        mostPop_precisions.append(mostPop_cur)\n",
+    "        recentPop_precisions.append(recentPop_cur)\n",
+    "        decayPop_precisions.append(decayPop_cur)\n",
+    "#         print(mostPop_cur, recentPop_cur, decayPop_cur)\n",
+    "\n",
+    "    mostPop_precision_final = sum(mostPop_precisions) / len(mostPop_precisions)\n",
+    "    recentPop_precision_final = sum(recentPop_precisions) / len(recentPop_precisions)\n",
+    "    decayPop_precision_final = sum(decayPop_precisions) / len(decayPop_precisions)\n",
+    "#     print(mostPop_precision_final, recentPop_precision_final, decayPop_precision_final)\n",
+    "    return mostPop_precision_final, recentPop_precision_final, decayPop_precision_final"
    ]
   },
   {
@@ -222,103 +180,301 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "precision 3\n",
-      "recall 3\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 3\n",
-      "recall 3\n",
-      "precision 3\n",
-      "recall 3\n",
-      "precision 3\n",
-      "recall 3\n",
-      "precision 3\n",
-      "recall 3\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 6\n",
-      "recall 6\n",
-      "precision 4\n",
-      "recall 4\n",
-      "precision 5\n",
-      "recall 5\n",
-      "precision 3\n",
-      "recall 3\n",
-      "precision 2\n",
-      "recall 2\n",
-      "precision 1\n",
-      "recall 1\n",
-      "precision 0\n",
-      "recall 0\n",
-      "precision 5\n",
-      "recall 5\n",
-      "precision 6\n",
-      "recall 6\n",
-      "precision 3\n",
-      "recall 3\n",
-      "precision 5\n",
-      "recall 5\n",
-      "precision 6\n",
-      "recall 6\n"
+      "1\n",
+      "3410\n",
+      "506\n",
+      "1585\n",
+      "207\n",
+      "2367\n",
+      "336\n",
+      "2459\n",
+      "305\n",
+      "3134\n",
+      "335\n",
+      "3149\n",
+      "198\n",
+      "3419\n",
+      "280\n",
+      "3836\n",
+      "248\n",
+      "4632\n",
+      "441\n",
+      "3055\n",
+      "215\n",
+      "1324\n",
+      "135\n",
+      "1356\n",
+      "459\n",
+      "1433\n",
+      "169\n",
+      "872\n",
+      "150\n",
+      "3929\n",
+      "500\n",
+      "4983\n",
+      "458\n",
+      "5449\n",
+      "809\n",
+      "7816\n",
+      "955\n",
+      "3414\n",
+      "403\n",
+      "0.02284300212005022 0.04284282443641624 0.042828240189275356\n",
+      "2\n",
+      "3410\n",
+      "506\n",
+      "1585\n",
+      "207\n",
+      "2367\n",
+      "336\n",
+      "2459\n",
+      "305\n",
+      "3134\n",
+      "335\n",
+      "3149\n",
+      "198\n",
+      "3419\n",
+      "280\n",
+      "3836\n",
+      "248\n",
+      "4632\n",
+      "441\n",
+      "3055\n",
+      "215\n",
+      "1324\n",
+      "135\n",
+      "1356\n",
+      "459\n",
+      "1433\n",
+      "169\n",
+      "872\n",
+      "150\n",
+      "3929\n",
+      "500\n",
+      "4983\n",
+      "458\n",
+      "5449\n",
+      "809\n",
+      "7816\n",
+      "955\n",
+      "3414\n",
+      "403\n",
+      "0.02284300212005022 0.039079191964327166 0.03836016359502405\n",
+      "3\n",
+      "3410\n",
+      "506\n",
+      "1585\n",
+      "207\n",
+      "2367\n",
+      "336\n",
+      "2459\n",
+      "305\n",
+      "3134\n",
+      "335\n",
+      "3149\n",
+      "198\n",
+      "3419\n",
+      "280\n",
+      "3836\n",
+      "248\n",
+      "4632\n",
+      "441\n",
+      "3055\n",
+      "215\n",
+      "1324\n",
+      "135\n",
+      "1356\n",
+      "459\n",
+      "1433\n",
+      "169\n",
+      "872\n",
+      "150\n",
+      "3929\n",
+      "500\n",
+      "4983\n",
+      "458\n",
+      "5449\n",
+      "809\n",
+      "7816\n",
+      "955\n",
+      "3414\n",
+      "403\n",
+      "0.02284300212005022 0.038129658359461464 0.034956282878836266\n",
+      "4\n",
+      "3410\n",
+      "506\n",
+      "1585\n",
+      "207\n",
+      "2367\n",
+      "336\n",
+      "2459\n",
+      "305\n",
+      "3134\n",
+      "335\n",
+      "3149\n",
+      "198\n",
+      "3419\n",
+      "280\n",
+      "3836\n",
+      "248\n",
+      "4632\n",
+      "441\n",
+      "3055\n",
+      "215\n",
+      "1324\n",
+      "135\n",
+      "1356\n",
+      "459\n",
+      "1433\n",
+      "169\n",
+      "872\n",
+      "150\n",
+      "3929\n",
+      "500\n",
+      "4983\n",
+      "458\n",
+      "5449\n",
+      "809\n",
+      "7816\n",
+      "955\n",
+      "3414\n",
+      "403\n",
+      "0.02284300212005022 0.03450884468092955 0.031691840644488156\n",
+      "5\n",
+      "3410\n",
+      "506\n",
+      "1585\n",
+      "207\n",
+      "2367\n",
+      "336\n",
+      "2459\n",
+      "305\n",
+      "3134\n",
+      "335\n",
+      "3149\n",
+      "198\n",
+      "3419\n",
+      "280\n",
+      "3836\n",
+      "248\n",
+      "4632\n",
+      "441\n",
+      "3055\n",
+      "215\n",
+      "1324\n",
+      "135\n",
+      "1356\n",
+      "459\n",
+      "1433\n",
+      "169\n",
+      "872\n",
+      "150\n",
+      "3929\n",
+      "500\n",
+      "4983\n",
+      "458\n",
+      "5449\n",
+      "809\n",
+      "7816\n",
+      "955\n",
+      "3414\n",
+      "403\n",
+      "0.02284300212005022 0.03347651145857746 0.03246231480936831\n",
+      "6\n",
+      "3410\n",
+      "506\n",
+      "1585\n",
+      "207\n",
+      "2367\n",
+      "336\n",
+      "2459\n",
+      "305\n",
+      "3134\n",
+      "335\n",
+      "3149\n",
+      "198\n",
+      "3419\n",
+      "280\n",
+      "3836\n",
+      "248\n",
+      "4632\n",
+      "441\n",
+      "3055\n",
+      "215\n",
+      "1324\n",
+      "135\n",
+      "1356\n",
+      "459\n",
+      "1433\n",
+      "169\n",
+      "872\n",
+      "150\n",
+      "3929\n",
+      "500\n",
+      "4983\n",
+      "458\n",
+      "5449\n",
+      "809\n",
+      "7816\n",
+      "955\n",
+      "3414\n",
+      "403\n",
+      "0.02284300212005022 0.03360881604126645 0.03243699501849284\n"
      ]
     }
    ],
    "source": [
-    "k = 10\n",
-    "decayPop_precisions = []\n",
-    "decayPop_recalls = []\n",
-    "decayPop_dcgs = []\n",
-    "for until in range(365 + 384, 9081, 365):\n",
-    "    recommended = decayPop(ratings, k, until, 6)\n",
-    "    i = 1\n",
-    "    while(ratings.get(until + i, -1) == -1):\n",
-    "        i += 1\n",
-    "    actual = actualPop(ratings, lookup, k, until + i)\n",
-    "    decayPop_precisions.append(precisionAtK(recommended, actual, k))\n",
-    "    decayPop_recalls.append(recallAtK(recommended, actual, k))\n",
-    "    decayPop_dcgs.append(ndcgAtK(recommended, actual, k))"
+    "mostPop_precision_collection = []\n",
+    "recentPop_precision_collection = []\n",
+    "decayPop_precision_collection = []\n",
+    "\n",
+    "for delta_t in range(1, 7):\n",
+    "    param = {}\n",
+    "    param['delta_t'] = delta_t\n",
+    "    print(param['delta_t'])\n",
+    "    mostPop_precision_final, recentPop_precision_final, decayPop_precision_final = getRPrecision(param)\n",
+    "    print(mostPop_precision_final, recentPop_precision_final, decayPop_precision_final)\n",
+    "    mostPop_precision_collection.append(mostPop_precision_final)\n",
+    "    recentPop_precision_collection.append(recentPop_precision_final)\n",
+    "    decayPop_precision_collection.append(decayPop_precision_final)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.22173913043478263\n",
-      "0.016952701963582367\n",
-      "0.10809737132217831\n",
-      "0.3130434782608696\n",
-      "0.027981815553884584\n",
-      "0.17351871650321823\n",
-      "0.308695652173913\n",
-      "0.02738471243003962\n",
-      "0.15537823289009464\n"
+      "[0.02284300212005022, 0.02284300212005022, 0.02284300212005022, 0.02284300212005022, 0.02284300212005022, 0.02284300212005022]\n",
+      "[0.04284282443641624, 0.039079191964327166, 0.038129658359461464, 0.03450884468092955, 0.03347651145857746, 0.03360881604126645]\n",
+      "[0.042828240189275356, 0.03836016359502405, 0.034956282878836266, 0.031691840644488156, 0.03246231480936831, 0.03243699501849284]\n"
      ]
     }
    ],
    "source": [
-    "print(sum(mostPop_precisions) / len(mostPop_precisions))\n",
-    "print(sum(mostPop_recalls) / len(mostPop_recalls))\n",
-    "print(sum(mostPop_dcgs) / len(mostPop_dcgs))\n",
-    "print(sum(recentPop_precisions) / len(recentPop_precisions))\n",
-    "print(sum(recentPop_recalls) / len(recentPop_recalls))\n",
-    "print(sum(recentPop_dcgs) / len(recentPop_dcgs))\n",
-    "print(sum(decayPop_precisions) / len(decayPop_precisions))\n",
-    "print(sum(decayPop_recalls) / len(decayPop_recalls))\n",
-    "print(sum(decayPop_dcgs) / len(decayPop_dcgs))"
+    "print(mostPop_precision_collection)\n",
+    "print(recentPop_precision_collection)\n",
+    "print(decayPop_precision_collection)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
