remove and comment unused code

--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -4,8 +4,18 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/clivian/opt/anaconda3/bin/python\n"
+     ]
+    }
+   ],
    "source": [
+    "import sys\n",
+    "print(sys.executable)\n",
     "from utils import *"
    ]
   },
@@ -139,8 +149,8 @@
     "    recentPop_precisions = []\n",
     "    decayPop_precisions = []\n",
     "\n",
-    "    for until in range(365 * 5 + 384, 9081, 365):    \n",
-    "#     for until in range(365 * 5 + 384, 365 * 5 + 384 + 1):\n",
+    "#     for until in range(365 * 5 + 384, 9081, 365):    \n",
+    "    for until in range(365 * 5 + 384, 365 * 5 + 384 + 1):\n",
     "        date = getNextValidDay(ratings, until)\n",
     "        user_activities = getUserActivities(ratings[date])\n",
     "        max_R = getMaxR(user_activities)\n",
@@ -183,243 +193,27 @@
       "1\n",
       "3410\n",
       "506\n",
-      "1585\n",
-      "207\n",
-      "2367\n",
-      "336\n",
-      "2459\n",
-      "305\n",
-      "3134\n",
-      "335\n",
-      "3149\n",
-      "198\n",
-      "3419\n",
-      "280\n",
-      "3836\n",
-      "248\n",
-      "4632\n",
-      "441\n",
-      "3055\n",
-      "215\n",
-      "1324\n",
-      "135\n",
-      "1356\n",
-      "459\n",
-      "1433\n",
-      "169\n",
-      "872\n",
-      "150\n",
-      "3929\n",
-      "500\n",
-      "4983\n",
-      "458\n",
-      "5449\n",
-      "809\n",
-      "7816\n",
-      "955\n",
-      "3414\n",
-      "403\n",
-      "0.02284300212005022 0.04284282443641624 0.042828240189275356\n",
+      "0.028686463989317512 0.06667031276133537 0.06675776129893249\n",
       "2\n",
       "3410\n",
       "506\n",
-      "1585\n",
-      "207\n",
-      "2367\n",
-      "336\n",
-      "2459\n",
-      "305\n",
-      "3134\n",
-      "335\n",
-      "3149\n",
-      "198\n",
-      "3419\n",
-      "280\n",
-      "3836\n",
-      "248\n",
-      "4632\n",
-      "441\n",
-      "3055\n",
-      "215\n",
-      "1324\n",
-      "135\n",
-      "1356\n",
-      "459\n",
-      "1433\n",
-      "169\n",
-      "872\n",
-      "150\n",
-      "3929\n",
-      "500\n",
-      "4983\n",
-      "458\n",
-      "5449\n",
-      "809\n",
-      "7816\n",
-      "955\n",
-      "3414\n",
-      "403\n",
-      "0.02284300212005022 0.039079191964327166 0.03836016359502405\n",
+      "0.028686463989317512 0.05156675249034483 0.05085539924926974\n",
       "3\n",
       "3410\n",
       "506\n",
-      "1585\n",
-      "207\n",
-      "2367\n",
-      "336\n",
-      "2459\n",
-      "305\n",
-      "3134\n",
-      "335\n",
-      "3149\n",
-      "198\n",
-      "3419\n",
-      "280\n",
-      "3836\n",
-      "248\n",
-      "4632\n",
-      "441\n",
-      "3055\n",
-      "215\n",
-      "1324\n",
-      "135\n",
-      "1356\n",
-      "459\n",
-      "1433\n",
-      "169\n",
-      "872\n",
-      "150\n",
-      "3929\n",
-      "500\n",
-      "4983\n",
-      "458\n",
-      "5449\n",
-      "809\n",
-      "7816\n",
-      "955\n",
-      "3414\n",
-      "403\n",
-      "0.02284300212005022 0.038129658359461464 0.034956282878836266\n",
+      "0.028686463989317512 0.04343602102795794 0.04396970601438442\n",
       "4\n",
       "3410\n",
       "506\n",
-      "1585\n",
-      "207\n",
-      "2367\n",
-      "336\n",
-      "2459\n",
-      "305\n",
-      "3134\n",
-      "335\n",
-      "3149\n",
-      "198\n",
-      "3419\n",
-      "280\n",
-      "3836\n",
-      "248\n",
-      "4632\n",
-      "441\n",
-      "3055\n",
-      "215\n",
-      "1324\n",
-      "135\n",
-      "1356\n",
-      "459\n",
-      "1433\n",
-      "169\n",
-      "872\n",
-      "150\n",
-      "3929\n",
-      "500\n",
-      "4983\n",
-      "458\n",
-      "5449\n",
-      "809\n",
-      "7816\n",
-      "955\n",
-      "3414\n",
-      "403\n",
-      "0.02284300212005022 0.03450884468092955 0.031691840644488156\n",
+      "0.028686463989317512 0.04500575701324628 0.043341015880166034\n",
       "5\n",
       "3410\n",
       "506\n",
-      "1585\n",
-      "207\n",
-      "2367\n",
-      "336\n",
-      "2459\n",
-      "305\n",
-      "3134\n",
-      "335\n",
-      "3149\n",
-      "198\n",
-      "3419\n",
-      "280\n",
-      "3836\n",
-      "248\n",
-      "4632\n",
-      "441\n",
-      "3055\n",
-      "215\n",
-      "1324\n",
-      "135\n",
-      "1356\n",
-      "459\n",
-      "1433\n",
-      "169\n",
-      "872\n",
-      "150\n",
-      "3929\n",
-      "500\n",
-      "4983\n",
-      "458\n",
-      "5449\n",
-      "809\n",
-      "7816\n",
-      "955\n",
-      "3414\n",
-      "403\n",
-      "0.02284300212005022 0.03347651145857746 0.03246231480936831\n",
+      "0.028686463989317512 0.044908190934396214 0.042595826757333366\n",
       "6\n",
       "3410\n",
       "506\n",
-      "1585\n",
-      "207\n",
-      "2367\n",
-      "336\n",
-      "2459\n",
-      "305\n",
-      "3134\n",
-      "335\n",
-      "3149\n",
-      "198\n",
-      "3419\n",
-      "280\n",
-      "3836\n",
-      "248\n",
-      "4632\n",
-      "441\n",
-      "3055\n",
-      "215\n",
-      "1324\n",
-      "135\n",
-      "1356\n",
-      "459\n",
-      "1433\n",
-      "169\n",
-      "872\n",
-      "150\n",
-      "3929\n",
-      "500\n",
-      "4983\n",
-      "458\n",
-      "5449\n",
-      "809\n",
-      "7816\n",
-      "955\n",
-      "3414\n",
-      "403\n",
-      "0.02284300212005022 0.03360881604126645 0.03243699501849284\n"
+      "0.028686463989317512 0.04390951800626597 0.04243300615973287\n"
      ]
     }
    ],
@@ -450,9 +244,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.02284300212005022, 0.02284300212005022, 0.02284300212005022, 0.02284300212005022, 0.02284300212005022, 0.02284300212005022]\n",
-      "[0.04284282443641624, 0.039079191964327166, 0.038129658359461464, 0.03450884468092955, 0.03347651145857746, 0.03360881604126645]\n",
-      "[0.042828240189275356, 0.03836016359502405, 0.034956282878836266, 0.031691840644488156, 0.03246231480936831, 0.03243699501849284]\n"
+      "[0.028686463989317512, 0.028686463989317512, 0.028686463989317512, 0.028686463989317512, 0.028686463989317512, 0.028686463989317512]\n",
+      "[0.06667031276133537, 0.05156675249034483, 0.04343602102795794, 0.04500575701324628, 0.044908190934396214, 0.04390951800626597]\n",
+      "[0.06675776129893249, 0.05085539924926974, 0.04396970601438442, 0.043341015880166034, 0.042595826757333366, 0.04243300615973287]\n"
      ]
     }
    ],
@@ -500,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
