change recent to be in days, use a year of data for evaluation

--- a/recommender.ipynb
+++ b/recommender.ipynb
@@ -15,6 +15,7 @@
    ],
    "source": [
     "import sys\n",
+    "import time\n",
     "print(sys.executable)\n",
     "from utils import *"
    ]
@@ -150,15 +151,16 @@
     "    decayPop_precisions = []\n",
     "\n",
     "#     for until in range(365 * 5 + 384, 9081, 365):    \n",
-    "    for until in range(365 * 5 + 384, 365 * 5 + 384 + 1):\n",
-    "        date = getNextValidDay(ratings, until)\n",
+    "    for date in range(365 * 5 + 384, 365 * 5 + 384 + 365):\n",
+    "        if ratings.get(date, -1) == -1:\n",
+    "            print('date', date, 'invalid')\n",
+    "            continue\n",
     "        user_activities = getUserActivities(ratings[date])\n",
     "        max_R = getMaxR(user_activities)\n",
-    "\n",
     "        max_R_mostPop, max_R_recentPop, max_R_decayPop = (\n",
-    "            mostPop(ratings, max_R, until),\n",
-    "            recentPop(ratings, max_R, until, month_recentPop),\n",
-    "            decayPop(ratings, max_R, until, month_decayPop)\n",
+    "            mostPop(ratings, max_R, date),\n",
+    "            recentPop(ratings, max_R, date, month_recentPop),\n",
+    "            decayPop(ratings, max_R, date, month_decayPop)\n",
     "        )\n",
     "\n",
     "        mostPop_cur, recentPop_cur, decayPop_cur = (\n",
@@ -171,7 +173,9 @@
     "        recentPop_precisions.append(recentPop_cur)\n",
     "        decayPop_precisions.append(decayPop_cur)\n",
     "#         print(mostPop_cur, recentPop_cur, decayPop_cur)\n",
-    "\n",
+    "    print(len(mostPop_precisions))\n",
+    "    print(len(recentPop_precisions))\n",
+    "    print(len(decayPop_precisions))\n",
     "    mostPop_precision_final = sum(mostPop_precisions) / len(mostPop_precisions)\n",
     "    recentPop_precision_final = sum(recentPop_precisions) / len(recentPop_precisions)\n",
     "    decayPop_precision_final = sum(decayPop_precisions) / len(decayPop_precisions)\n",
@@ -191,29 +195,104 @@
      "output_type": "stream",
      "text": [
       "1\n",
-      "3410\n",
-      "506\n",
-      "0.028686463989317512 0.06667031276133537 0.06675776129893249\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.0685879151917103 0.0685879151917103\n",
       "2\n",
-      "3410\n",
-      "506\n",
-      "0.028686463989317512 0.05156675249034483 0.05085539924926974\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07374472010112573 0.07284502412854128\n",
       "3\n",
-      "3410\n",
-      "506\n",
-      "0.028686463989317512 0.04343602102795794 0.04396970601438442\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.0757649021719699 0.07252027179271499\n",
       "4\n",
-      "3410\n",
-      "506\n",
-      "0.028686463989317512 0.04500575701324628 0.043341015880166034\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07651280520643765 0.07173911334589773\n",
       "5\n",
-      "3410\n",
-      "506\n",
-      "0.028686463989317512 0.044908190934396214 0.042595826757333366\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07637514646836902 0.06985200212793137\n",
       "6\n",
-      "3410\n",
-      "506\n",
-      "0.028686463989317512 0.04390951800626597 0.04243300615973287\n"
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07563465138866554 0.0696291910925204\n",
+      "7\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.0758137636960755 0.06899143201107742\n",
+      "8\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07533382058705879 0.0666515501920899\n",
+      "9\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07522175947428829 0.06594616080504387\n",
+      "10\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07483414060729318 0.06515200319575391\n",
+      "11\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07441430632276524 0.06470533335481422\n",
+      "12\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07395990304943739 0.06400198341163191\n",
+      "13\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07377878381553565 0.06352299837260265\n",
+      "14\n",
+      "date 2295 invalid\n",
+      "date 2463 invalid\n",
+      "363\n",
+      "363\n",
+      "363\n",
+      "0.030591911055499996 0.07318067396733648 0.06298331592220029\n",
+      "6406.818417787552\n"
      ]
     }
    ],
@@ -222,7 +301,8 @@
     "recentPop_precision_collection = []\n",
     "decayPop_precision_collection = []\n",
     "\n",
-    "for delta_t in range(1, 7):\n",
+    "start = time.time()\n",
+    "for delta_t in range(1, 15):    \n",
     "    param = {}\n",
     "    param['delta_t'] = delta_t\n",
     "    print(param['delta_t'])\n",
@@ -230,7 +310,10 @@
     "    print(mostPop_precision_final, recentPop_precision_final, decayPop_precision_final)\n",
     "    mostPop_precision_collection.append(mostPop_precision_final)\n",
     "    recentPop_precision_collection.append(recentPop_precision_final)\n",
-    "    decayPop_precision_collection.append(decayPop_precision_final)"
+    "    decayPop_precision_collection.append(decayPop_precision_final)\n",
+    "end = time.time()\n",
+    "elapse = end - start\n",
+    "print(elapse)"
    ]
   },
   {
@@ -244,9 +327,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.028686463989317512, 0.028686463989317512, 0.028686463989317512, 0.028686463989317512, 0.028686463989317512, 0.028686463989317512]\n",
-      "[0.06667031276133537, 0.05156675249034483, 0.04343602102795794, 0.04500575701324628, 0.044908190934396214, 0.04390951800626597]\n",
-      "[0.06675776129893249, 0.05085539924926974, 0.04396970601438442, 0.043341015880166034, 0.042595826757333366, 0.04243300615973287]\n"
+      "[0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996, 0.030591911055499996]\n",
+      "[0.0685879151917103, 0.07374472010112573, 0.0757649021719699, 0.07651280520643765, 0.07637514646836902, 0.07563465138866554, 0.0758137636960755, 0.07533382058705879, 0.07522175947428829, 0.07483414060729318, 0.07441430632276524, 0.07395990304943739, 0.07377878381553565, 0.07318067396733648]\n",
+      "[0.0685879151917103, 0.07284502412854128, 0.07252027179271499, 0.07173911334589773, 0.06985200212793137, 0.0696291910925204, 0.06899143201107742, 0.0666515501920899, 0.06594616080504387, 0.06515200319575391, 0.06470533335481422, 0.06400198341163191, 0.06352299837260265, 0.06298331592220029]\n"
      ]
     }
    ],
